--- a/HPP/pom.xml
+++ b/HPP/pom.xml
@@ -4,7 +4,11 @@
   <artifactId>HPP</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
-  
+
+	<properties>
+		<org.apache.tiles-version>3.0.8</org.apache.tiles-version>
+	</properties>
+ 
   	<dependencies>
 		<dependency>
 		    <groupId>org.springframework</groupId>
@@ -18,5 +22,43 @@
 		    <version>5.2.22.RELEASE</version>
 		</dependency> 
 
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    <version>2.13.4</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>commons-fileupload</groupId>
+		    <artifactId>commons-fileupload</artifactId>
+		    <version>1.4</version>
+		</dependency>
+		
+		<!-- Tiles -->
+		<dependency>
+			<groupId>org.apache.tiles</groupId>
+			<artifactId>tiles-core</artifactId>
+			<version>${org.apache.tiles-version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.tiles</groupId>
+			<artifactId>tiles-servlet</artifactId>
+			<version>${org.apache.tiles-version}</version>
+		</dependency>
+		
+		<dependency>
+		          <groupId>org.apache.tiles</groupId>
+		          <artifactId>tiles-jsp</artifactId>
+		          <version>${org.apache.tiles-version}</version>
+		      </dependency>
+		
+		<dependency>
+			<groupId>org.apache.tiles</groupId>
+			<artifactId>tiles-extras</artifactId>
+			<version>${org.apache.tiles-version}</version>
+		</dependency>		
+		
+				
 	</dependencies>	
 </project>
