--- a/HPP/pom.xml
+++ b/HPP/pom.xml
@@ -59,6 +59,12 @@
 			<version>${org.apache.tiles-version}</version>
 		</dependency>		
 		
+		<dependency>
+		    <groupId>javax.servlet</groupId>
+		    <artifactId>jstl</artifactId>
+		    <version>1.2</version>
+		</dependency>
+
 				
 	</dependencies>	
 </project>
