--- a/HPP/pom.xml
+++ b/HPP/pom.xml
@@ -89,6 +89,13 @@
 		    <groupId>org.mybatis</groupId>
 		    <artifactId>mybatis-spring</artifactId>
 		    <version>2.0.7</version>
-		</dependency>				
+		</dependency>	
+		
+		<dependency>
+		    <groupId>javax.servlet</groupId>
+		    <artifactId>javax.servlet-api</artifactId>
+		    <version>4.0.1</version>
+		    <scope>provided</scope>
+		</dependency>					
 	</dependencies>	
 </project>
