--- a/HPP/pom.xml
+++ b/HPP/pom.xml
@@ -7,6 +7,8 @@
 
 	<properties>
 		<org.apache.tiles-version>3.0.8</org.apache.tiles-version>
+        <slf4j.version>1.7.32</slf4j.version>
+        <log4j2.version>2.17.0</log4j2.version>		
 	</properties>
  
   	<dependencies>
@@ -96,6 +98,19 @@
 		    <artifactId>javax.servlet-api</artifactId>
 		    <version>4.0.1</version>
 		    <scope>provided</scope>
-		</dependency>					
+		</dependency>	
+		
+		<!--log4j-->
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>2.17.1</version>
+		</dependency>	
+		<dependency>
+		    <groupId>org.apache.logging.log4j</groupId>
+		    <artifactId>log4j-core</artifactId>
+		    <version>2.17.1</version>
+		</dependency>
+						
 	</dependencies>	
 </project>
