--- a/HPP/src/main/webapp/WEB-INF/web.xml
+++ b/HPP/src/main/webapp/WEB-INF/web.xml
@@ -2,8 +2,13 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
   <display-name>HPP</display-name>
   <welcome-file-list>
-    <welcome-file>home.jsp</welcome-file>
+    <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
+  
+  <context-param>
+  	<param-name>log4jConfigLocation</param-name>
+  	<param-value>/WEB-INF/classes/log4j2</param-value>
+  </context-param>
   
   <servlet>
   	<servlet-name>dispatcherServlet</servlet-name>
