--- a/HPP/pom.xml
+++ b/HPP/pom.xml
@@ -8,7 +8,7 @@
 	<properties>
 		<org.apache.tiles-version>3.0.8</org.apache.tiles-version>
         <slf4j.version>1.7.32</slf4j.version>
-        <log4j2.version>2.17.0</log4j2.version>		
+        <log4j2.version>2.17.1</log4j2.version>		
 	</properties>
  
   	<dependencies>
@@ -100,17 +100,27 @@
 		    <scope>provided</scope>
 		</dependency>	
 		
-		<!--log4j-->
+		<!--log4j2-->
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-api</artifactId>
-			<version>2.17.1</version>
+			<version>${log4j2.version}</version>
 		</dependency>	
 		<dependency>
 		    <groupId>org.apache.logging.log4j</groupId>
 		    <artifactId>log4j-core</artifactId>
-		    <version>2.17.1</version>
+		    <version>${log4j2.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-1.2-api</artifactId>
+			<version>${log4j2.version}</version>
+		</dependency>	
+		<dependency>
+		    <groupId>org.apache.logging.log4j</groupId>
+		    <artifactId>log4j-slf4j-impl</artifactId>
+		    <version>${log4j2.version}</version>
+		</dependency>			
 						
 	</dependencies>	
 </project>
