--- a/HPP/pom.xml
+++ b/HPP/pom.xml
@@ -6,6 +6,8 @@
   <packaging>war</packaging>
 
 	<properties>
+    	<project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
+	 	<project.reporting.outputEncoding>utf-8</project.reporting.outputEncoding>	
 		<org.apache.tiles-version>3.0.8</org.apache.tiles-version>
         <slf4j.version>1.7.32</slf4j.version>
         <log4j2.version>2.17.1</log4j2.version>		
@@ -120,7 +122,17 @@
 		    <groupId>org.apache.logging.log4j</groupId>
 		    <artifactId>log4j-slf4j-impl</artifactId>
 		    <version>${log4j2.version}</version>
-		</dependency>			
+		</dependency>	
+		
+		<!--Gson 시작-->
+		<dependency>
+		  <groupId>com.google.code.gson</groupId>
+		  <artifactId>gson</artifactId>
+		  <version>2.10</version>
+		</dependency>	
+		<!--Gson 끝-->
+		
+					
 						
 	</dependencies>	
 </project>
