자동 세션 종료 기능 구현 완료

--- a/HPP/pom.xml
+++ b/HPP/pom.xml
@@ -139,7 +139,14 @@
 		    <version>1.15</version>
 		</dependency>
 		<!-- BASE64 끝 -->
-					
+
+		<!-- Sql Log 시작 -->
+		<dependency>
+		    <groupId>org.lazyluke</groupId>
+		    <artifactId>log4jdbc-remix</artifactId>
+		    <version>0.2.7</version>
+		</dependency>		
+		<!-- Sql Log 끝 -->			
 						
 	</dependencies>	
 </project>
