--- a/HPP/src/main/webapp/WEB-INF/web.xml
+++ b/HPP/src/main/webapp/WEB-INF/web.xml
@@ -18,8 +18,7 @@
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>/WEB-INF/spring/servlet-context.xml</param-value><!-- context 
-				파일 경로 -->
+			<param-value>/WEB-INF/spring/**.xml</param-value><!-- context 파일 경로 -->
 		</init-param>
 	</servlet>
 
