--- a/HPP/pom.xml
+++ b/HPP/pom.xml
@@ -146,7 +146,28 @@
 		    <artifactId>log4jdbc-remix</artifactId>
 		    <version>0.2.7</version>
 		</dependency>		
-		<!-- Sql Log 끝 -->			
+		<!-- Sql Log 끝 -->	
+		
+		<!-- 엑셀 관련 시작 -->
+		<dependency>
+		    <groupId>org.apache.poi</groupId>
+		    <artifactId>poi</artifactId>
+		    <version>5.2.3</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.apache.poi</groupId>
+		    <artifactId>poi-ooxml</artifactId>
+		    <version>5.2.3</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>commons-io</groupId>
+		    <artifactId>commons-io</artifactId>
+		    <version>2.11.0</version>
+		</dependency>
+		<!-- 엑셀 관련 끝 -->
+				
 						
 	</dependencies>	
 </project>
