--- a/HPP/pom.xml
+++ b/HPP/pom.xml
@@ -168,6 +168,18 @@
 		</dependency>
 		<!-- 엑셀 관련 끝 -->
 				
-						
+		<!-- AOP 관련 시작 -->	
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-aop</artifactId>
+		    <version>6.0.3</version>
+		</dependency>
+
+		<dependency>
+		    <groupId>org.aspectj</groupId>
+		    <artifactId>aspectjweaver</artifactId>
+		    <version>1.9.9.1</version>
+		</dependency>
+		<!-- AOP 관련 끝 -->	
 	</dependencies>	
 </project>
