--- a/HPP/pom.xml
+++ b/HPP/pom.xml
@@ -212,6 +212,24 @@
 		    <version>1.3.2</version>
 		</dependency>
 		
+		<!-- WebScraper  -->
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.13</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpcore-nio</artifactId>
+			<version>4.4.14</version>
+		</dependency>
+
+		<dependency>
+		    <groupId>org.jsoup</groupId>
+		    <artifactId>jsoup</artifactId>
+		    <version>1.16.1</version>
+		</dependency>
 
 		
 	</dependencies>	
