--- a/HPP/src/main/webapp/WEB-INF/web.xml
+++ b/HPP/src/main/webapp/WEB-INF/web.xml
@@ -57,6 +57,10 @@
 			<param-name>contextConfigLocation</param-name>
 			<param-value>/WEB-INF/spring/**.xml</param-value><!-- context 파일 경로 -->
 		</init-param>
+       	<init-param>
+	        <param-name>throwExceptionIfNoHandlerFound</param-name>
+	        <param-value>true</param-value>
+    	</init-param>
 	</servlet>
 
 	<servlet-mapping>
